test/classes/errors/nilability-init-var/init-var-oknil-shared-from-nonnil-borrowed.good
init-var-oknil-shared-from-nonnil-borrowed.chpl:9: error: invalid copy-initialization
init-var-oknil-shared-from-nonnil-borrowed.chpl:9: error: cannot initialize 'shared MyClass?' from a 'borrowed MyClass'
